# IceClimberClone

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TASKS_AND_ROADMAP.txt  build.sh  build_windows.bat  main.cpp  main_character.cpp  main_character.h  makefile  object_action.cpp  object_action.h  object_frame.cpp  object_frame.h  object_manager.cpp  object_manager.h  object_sprite_sheet.cpp  object_sprite_sheet.h  object_sprite_sheet_animation.cpp  object_sprite_sheet_animation.h  object_type.cpp  object_type.h  object_type_manager.cpp  object_type_manager.h  scene_object.cpp  scene_object.h  scene_object_base.cpp  scene_object_base.h  scene_object_factory.cpp  scene_object_factory.h  scene_object_factory_register.cpp  scene_object_factory_register.h  scene_object_manager.cpp  scene_object_manager.h  scene_object_texture_manager.cpp  scene_object_texture_manager.h  setup_vcpkg.bat  shader.fs  shader.vs  (+9 more)
pixelart_samples/wills_pixel_explosions_sample/: license.txt  readme.txt
pixelart_samples/wills_pixel_explosions_sample/X_plosion/spritesheet/: spritesheet.txt
pixelart_samples/wills_pixel_explosions_sample/round_explosion/spritesheet/: spritesheet.txt
pixelart_samples/wills_pixel_explosions_sample/round_vortex/spritesheet/: spritesheet.txt
pixelart_samples/wills_pixel_explosions_sample/vertical_explosion/spritesheet/: spritesheet.txt
pixelart_samples/wills_pixel_explosions_sample/vertical_explosion_small/spritesheet/: spritesheet.txt
src/: brick.cpp  brick.h  defines.h  entity.cpp  entity.h  entity_data_manager.cpp  entity_data_manager.h  entity_factory.cpp  entity_factory.h  entity_manager.cpp  entity_manager.h  entity_sprite_sheet.cpp  entity_sprite_sheet.h  entity_sprite_sheet_animation.cpp  entity_sprite_sheet_animation.h  filesystem.h  float_double_buffer.cpp  float_double_buffer.h  fvec2.cpp  fvec2.h  game_manager.cpp  game_manager.h  main_character.cpp  main_character.h  main_character_state_machine.cpp  main_character_state_machine.h  main_menu_screen.cpp  object_sprite_sheet.cpp  object_sprite_sheet.h  object_sprite_sheet_animation.cpp  object_sprite_sheet_animation.h  position.cpp  position.h  scene_object.cpp  scene_object.h  scene_object_data_manager.cpp  scene_object_data_manager.h  scene_object_factory.cpp  scene_object_factory.h  scene_object_manager.cpp  (+23 more)
src/collision/: collision.h
src/collision/algorithm/: CollisionDetector.cpp  CollisionDetector.h  Penetration.h
src/collision/geometry/: Rectangle.cpp  Rectangle.h
src/collision/structures/: vec2.hpp
src/entities/: bonus_stage_text.cpp  bonus_stage_text.h  bonus_stage_tile.cpp  bonus_stage_tile.h  brick.cpp  brick.h  cloud.cpp  cloud.h  condor.cpp  condor.h  game_over.cpp  game_over.h  ice.cpp  ice.h  nitpicker.cpp  nitpicker.h  nitpicker_state_transitions.cpp  number.cpp  number.h  player.cpp  player.h  player_state_transitions.cpp  side_wall.cpp  side_wall.h  topi.cpp  topi.h  topi_state_transitions.cpp  vegetable.cpp  vegetable.h  water.cpp  water.h
src/items/: brick.cpp  brick.h  brick_blue.cpp  brick_blue.h  brick_blue_half.cpp  brick_blue_half.h  brick_brown.cpp  brick_brown.h  brick_brown_half.cpp  brick_brown_half.h  brick_green_half.cpp  brick_green_half.h  main_character.cpp  main_character.h  side_wall.cpp  side_wall.h  side_wall_blue_columns_left.cpp  side_wall_blue_columns_left.h  side_wall_blue_columns_right.cpp  side_wall_blue_columns_right.h  side_wall_blue_left.cpp  side_wall_blue_left.h  side_wall_blue_right.cpp  side_wall_blue_right.h  side_wall_brown_columns_left.cpp  side_wall_brown_columns_left.h  side_wall_brown_columns_right.cpp  side_wall_brown_columns_right.h  side_wall_brown_left.cpp  side_wall_brown_left.h  side_wall_brown_right.cpp  side_wall_brown_right.h  side_wall_green_columns_left.cpp  side_wall_green_columns_left.h  side_wall_green_columns_right.cpp  side_wall_green_columns_right.h  side_wall_green_left.cpp  side_wall_green_left.h  side_wall_green_right.cpp  side_wall_green_right.h
src/objects/: brick.cpp  brick.h  cloud.cpp  cloud.h  player.cpp  player.h  player_state_transitions.cpp  side_wall.cpp  side_wall.h
textures/: player.psd
visuals/: player.psd
